<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shahad.app.my_school.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/monda_bold"
            android:text="@string/login"
            android:textColor="@color/brand_color"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            style="@style/EditTextField"
            android:hint="@string/name"
            android:background="@drawable/reg_rounded"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            style="@style/EditTextField"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/reg_rounded"
            app:layout_constraintTop_toBottomOf="@id/edit_name"/>

        <Spinner
            android:id="@+id/user_type"
            android:layout_width="248dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="24dp"
            android:background="@drawable/reg_rounded"
            android:textColor="@color/shade_secondary_color"
            android:paddingStart="16dp"

            android:textSize="14sp"
            android:entries="@array/user_types"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/reg_rounded"
            android:backgroundTint="@color/brand_color"
            android:text="@string/login_button"
            android:textColor="@color/shade_primary_color"
            app:layout_constraintTop_toBottomOf="@+id/user_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_nav"
            android:layout_marginTop="24dp"
            android:textColor="@color/shade_secondary_color"
            app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
            app:layout_constraintStart_toStartOf="@+id/appCompatButton"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>